--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                             beforeSend: function() {
                                 $('.loader').html('<ons-progress-bar indeterminate></ons-progress-bar>')
                             },
+                            async: true,
                             complete: function () {
                                 //$('.loader').html('');
                             }, 
@@ -279,7 +280,7 @@
                     to be very helpful or entertaining, feel free to buy me Coffee <i class="fa fa-coffee" aria-hidden="true"></i>
                 </p>
                 <form>
-                    <script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script>
+                    <script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js" async></script>
                     <input type="number" value="1500" class="form-control" id="amount" placeholder="Amount in UGX"> <br>
                     <button class="ui button positive" type="button" id="donate"> Buy me Coffee <i class="fa fa-coffee" aria-hidden="true"></i> </button>
                 </form>
