--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         else {
                             var x = getpaidSetup({
                                 PBFPubKey: API_publicKey,
-                                customer_email: 'davida.2010@hotmail.com',
+                                customer_email: 'info@naluus.com',
                                 amount: money,
                                 currency: "UGX",
                                 txref: "rave-123456", 
